--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.html">Home</a>
+    <a href="index.html" class="active">Home</a>
     <div class="dropdown">
       <a href="#" class="dropdown-toggle" id="dropdownmenu" role="button" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">Tentang Carikamar</a>
       <div class="dropdown-menu" aria-labelledby="dropdownmenu">
         <a href="profil.html" class="dropdown-item">Profil Kami</a>
-        <a href="#" class="dropdown-item">Hubungi Kami</a>
-        <a href="#" class="dropdown-item">Mitra Kami</a>
+        <a href="hubungi.html" class="dropdown-item">Hubungi Kami</a>
+        <a href="mitra.html" class="dropdown-item">Mitra Kami</a>
       </div>
     </div>
-    <a href="#">Info</a>
+    <a href="info.html">Info</a>
     <a href="https://carikamar.id">Blog</a>
   </div>
 
