--- a/profil.html
+++ b/profil.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
+<body style="background-color: #229bd7;">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
@@ -29,16 +29,16 @@
                 aria-haspopup="true" aria-expanded="false">Tentang Carikamar</a>
             <div class="dropdown-menu" aria-labelledby="dropdownmenu">
                 <a href="profil.html" class="dropdown-item active">Profil Kami</a>
-                <a href="#" class="dropdown-item">Hubungi Kami</a>
-                <a href="#" class="dropdown-item">Mitra Kami</a>
+                <a href="hubungi.html" class="dropdown-item">Hubungi Kami</a>
+                <a href="mitra.html" class="dropdown-item">Mitra Kami</a>
             </div>
         </div>
-        <a href="#">Info</a>
+        <a href="info.html">Info</a>
         <a href="https://carikamar.id">Blog</a>
         <style>
             .proff {
-                background-color: #229bd7;
-                height: 1000px;
+                
+                height: 1800px;
             }
         </style>
     </div>
@@ -71,7 +71,7 @@
                     online yang
                     didirikan pada tahun 2020 di Banyuwangi. CariKamar hadir sebagai solusi untuk mengurangi masalah
                     konsumen dalam pencarian penginapan secara online. CariKamar yang dapat diakses dimanapun melalui
-                    Android dan website www.carikamar.id </p>
+                    Android, iOS, dan website www.carikamar.id </p>
                 <br /><br />
                 <div class="row" style="justify-content: center;align-items: center;">
                     <div class="col-sm-4">
@@ -80,18 +80,35 @@
                         <p>Menjadi satu-satunya layanan booking hotel yang kompetitif, representative, dan inovatif
                             dengan memiliki beragam fitur yang dapat memudahkan pengguna dalam setiap transaksi.</p>
                     </div>
-                    <div class="col-sm-5">
-                        <h5 style="color: white;">Misi</h5>
-                        <hr style="width: 100px;">
-                        <p>1. Meningkatkan nilai okupansi unit Hotel milik setiap Mitra.</p>
-                        <p>2. Memberi solusi dan akses kemudahan bagi pengguna Aplikasi untuk mencari penginapan.</p>
-                        <p>3. Menjadi pelopor layanan booking Hotel yang inovatif dan representatif dengan
-                            memperkenalkan nilai-nilai kearifan lokal, adat dan budaya Indonesia kepada User baik secara
-                            domestik ataupun mancanegara. </p>
-                        <p>4. Menciptakan SDM yang berkualitas dengan menumbuhkan jiwa entrepreneur bagi kalangan muda</p>
+                    <div class="col-sm-4">
+                        <img src="images/visi.png" width="650" height="450" />
                     </div>
                 </div>
+                <br/><br/>
+                <div class="row" style="justify-content: center;align-items: center;">
+                    <div class="col-sm-4">
+                        <img src="images/misi.png" width="450" height="450" />
+                    </div>
+                    <div class="col-sm-4" style="margin-left: 100px;">
+                        <h5 style="color: white;">Misi</h5>
+                        <hr style="width: 100px;">
+                        <p style="text-align: justify;">1. Meningkatkan nilai okupansi unit Hotel milik setiap Mitra.</p>
+                        <p style="text-align: justify;">2. Memberi solusi dan akses kemudahan bagi pengguna Aplikasi untuk mencari penginapan.</p>
+                        <p style="text-align: justify;">3. Menjadi pelopor layanan booking Hotel yang inovatif dan representatif dengan
+                            memperkenalkan nilai-nilai kearifan lokal, adat dan budaya Indonesia kepada User baik secara
+                            domestik ataupun mancanegara. </p>
+                        <p style="text-align: justify;">4. Menciptakan SDM yang berkualitas dengan menumbuhkan jiwa entrepreneur bagi kalangan muda
+                        </p>
+                    </div>
+                </div>
+                <br/><br/>
             </center>
+            <div class="icon fadein" style="margin-left: 800px;">
+                <h5>Ikuti Sosial Media Kami</h5>
+               <a href="https://www.instagram.com/carikamar.id/"><img src="images/instagram.png" width="100" height="70"></a> 
+                <a href="https://www.facebook.com/CariKamar.id"><img src="images/facebook.png" width="50" height="50"></a>
+                <a href="https://twitter.com/carikamar_id"><img src="images/twitter.png" width="80" height="50"></a>
+            </div>
         </div>
     </div>
 </body>
