--- a/mitra.html
+++ b/mitra.html
@@ -86,7 +86,7 @@
                 <p>Induk Koperasi Kepolisian Negara Republik Indonesia ( INKOPPOL ) adalah Koperasi Sekunder Tingkat
                     Nasional yang bergerak dibidang perdagangan dan pengembangan Jasa Umum.</p>
             </div>
-
+            <i class="fa-hospital"></i>
         </center>
     </div>
 </body>
