--- a/hubungi.html
+++ b/hubungi.html
@@ -69,14 +69,26 @@
                     <p style="font-family: Baloo Bhaijaan;">Untuk informasi lebih lanjut tentang produk dan layanan kami, anda bisa menghubungi kami melalui
                         kontak yang tersedia.</p>
                         <br/>
-                    <div class="row">
-                        <div class="col-sm-2">
+                    <div class="row" style="justify-content: center;">
+                        <div class="col-sm-5">
                             <h5>Telepon:</h5>
+                            <p>(0333) 3388457</p>
                         </div>
+                        <div class="col-sm-4">
+                            <h5>Email:</h5>
+                            <p>info@carikamar.id</p>
+                        </div>
+                    </div>
+                    <div class="row" style="justify-content: center;">
+                        <div class="col-sm-5">
+                            <h5>Whatsapp:</h5>
+                            <p>(+62)815-1525-0799</p>
+                        </div>
+      
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <form style="margin-top: 50px;">
+                    <form style="margin-top: 70px;">
                         <div class="form-group">
                             <input type="text" class="form-control" name="nama" placeholder="Nama"/>
                             <br/>
